# cascade

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: gh-pages.yml  python-package-conda.yml
0_setup/: 0.5-make-si-cell.ipynb  0_make-solution.ipynb  0_make-solution.py  1_relax-initial-geometry.ipynb  1_relax-initial-geometry.py  2_equilibrate-at-room-temperature.ipynb  2_equilibrate-at-room-temperature.py  3_assess-md-trajectory.ipynb  README.md  packmol.inp
0_setup/initial-geometries/: si-vacancy-2x2x2.vasp
1_mace/: 0_finetune_ensemble.ipynb  0_retrain-foundation-model.ipynb  1_train-mace-ensemble.sh  1_train-mace-replica.py  1_train-mace.py  2_compare-runs.ipynb  3_compute_forces.py  4_assess-ml-trajectory.ipynb  4_generate-ml-trajectories.ipynb  4_sanity_check_uq.ipynb  5_assess-ml-trajectories.ipynb  README.md
1_ml-potential/: 0_torchani-learner.ipynb  1_train-ani-ens.sh  1_train-ani-replica.py  2_evaluate_ens.ipynb  6_calibrate_UQ.ipynb
1_ml-potential/chgnet/: 0_train-chgnet.py  README.md
1_ml-potential/mace/: 0_train-mace.py  README.md
1_ml-potential/spk/: 0_train-spk.py
1_ml-potential/torchani/: 0_train-torchani.py  1_compare-runs.ipynb
2_cascade/: 1_prototype-cascade.ipynb  2_prototype-audits.ipynb
2_proxima/: 0_run-serial-proxima.py  1.1_cost_accuracy.ipynb  1_evaluate-performance.ipynb  1_inspect_npt_runs-Copy1.ipynb  1_inspect_npt_runs.ipynb  2_examine_controller.ipynb  2_postprocess_runs.py  3_arrhenius.ipynb  3_postprocess_runs.py  4_count_vacancy_hops.py  4_inspect-diffusion-coeffs.ipynb  4_vacancies.ipynb  5_count_vacancy_hops.py  6_vacancy-hops.ipynb  README.md  RuntimeDeepDive.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  boltzmann.ipynb  compute_densities.ipynb  diffusion-deepdive.ipynb  illustrate_lambda.ipynb  improv-proxima.sh  launch_jobs.py  manuscript_figs.ipynb  wigner-seitz.ipynb
3_cascade/: 0_UQ-tests.ipynb  0_run_cascade.py  1_parse_results.ipynb  1_prototype-cascade.ipynb  1_sanity_check_run.ipynb  config.py  leak.ipynb  monitor_fds_academy.sh  run_cascade.py  run_cascade_academy.py  run_cascade_academy.sh  test_0_run_cascade.py
3_cascade/academy/: agents.py  base_agents.py  model.py  run_cascade_academy.py  test_agents.py
3_cascade/initial-geometries/: si-perfect-2x2x2.vasp
3_cascade/scripts/: plot_static_metrics.py
cascade/: auditor.py  calculator.py  config.py  dynamics.py  model.py  runner.py  trajectory.py  utils.py
cascade/agents/: README_ORM.md  agents.py  config.py  db_orm.py  (+2 more)
doc/: dynamics.rst
docs/: conf.py  dynamics.rst  index.rst  install.md  use.md
notebooks/: demo_torchani_learner.ipynb  get-probability-force-above-threshold.ipynb
scripts/: README.md  migrate_trajectory_status.py  plot_static_metrics.py  visualize_trajectory_flow.py
tests/: conftest.py  test_agents_retry.py  test_calculator.py  test_db_orm.py  test_dynamics.py  test_ensembling.py  test_ensmbling.py  test_proxima.py  test_trajectory.py
(+42 files in other folders)
